Fix button visibility condition and update toggle-zero rotation

--- a/src/app/khiops-library/components/matrix/matrix.component.scss
+++ b/src/app/khiops-library/components/matrix/matrix.component.scss
@@ -42,7 +42,7 @@
   }
 
   button.toggle-zero.toggled-true {
-    transform: rotate(90deg);
+    transform: rotate(180deg);
   }
 
   #matrix-area {
